<resources>
    <string name="construction_deck">Construction Deck</string>
    <string name="menu">Menu</string>
    <string name="app_name">CastleWar</string>
    <string name="play_button">Jouer</string>
    <string name="Tutoriel">Tutoriel</string>
    <string name="end_button">Terminer</string>
    <string name="deck_choice">Jouer cette carte</string>
    <string name="deck_choice_wrong">Vous devez attendre votre tour</string>
    <string name="deck_choice_crystals">Vous n\'avez pas assez de cristaux</string>
    <string name="menu_options">Options</string>
    <string name="game_already_moved">Vous avez déjà déplacé cette carte durant ce round, veuillez attendre le suivant</string>
    <string name="game_not_your_card">Cette carte ne vous appartient pas</string>
    <string name="game_deck_empty">Votre deck est vide !</string>
    <string name="game_case_menu_move">Mouvement</string>
    <string name="game_case_menu_spell">Utiliser le sort</string>
    <string name="logout_button">Se déconnecter</string>
    <string name="game_context_menu_info">Voir la carte</string>
    <string name="game_context_menu_spell">Utiliser le sort</string>
    <string name="email">Email :</string>
    <string name="passwordconf">Confirmez le mot de passe:</string>
    <string name="pseudo">Pseudo :</string>
    <string name="password">Mot de passe :</string>
    <string name="rememberMe">Connexion automatique</string>
    <string name="creeCompte">Créer un compte</string>
    <string name="annuler">Annuler</string>
    <string name="connection">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="toastConfirmationPassword">Les deux mots de passe ne sont pas identiques</string>
    <string name="toastCreationDuCompte">Compte créé</string>
    <string name="toastChampVide">Tous les champs sont à remplir</string>
    <string name="toastCaractereInvalide">Votre pseudo ou mot de passe contient des caractères invalides ( : n\'est pas autorisé)</string>
    <string name="toastEmailInvalide">Votre adresse mail est invalide</string>
    <string name="toastConnectionFailed">La connexion a échouée, mauvais pseudo ou mot de passe, veuillez recommencer</string>
    <string name="toastLoadingCards">Attendez la fin du chargement des cartes &#8230;</string>
    <string name="toastQuitLaunch">Appuyez une nouvelle fois pour quitter</string>
    <string name="connection_alert_loading_title">Connexion</string>
    <string name="connection_alert_loading_message">Connexion automatique en cours &#8230;</string>
    <string name="toastUncompleteDeck">Votre deck est incomplet ! Veuillez le remplir dans le menu de constitution de deck</string>
    <string name="waiting_for_game">Recherche de partie en cours &#8230;</string>
    <string name="credits">Credits</string>
    <string name="titreCreation">Créé par :</string>
    <string name="creation">
            - Chef de projet : Mignot Kévin\n
            - Fassot Clément\n
            - Gonet Logan\n
            - Chauvet Maël
    </string>
    <string name="cadre">Cadre : PTS3</string>
    <string name="tuteur">Tuteur : Clément Laborie</string>
    <string name="titreImage">Crédit images :</string>
    <string name="images">
        - thenounproject.com
    </string>
    <string name="titreEffets">Crédit effets :</string>
    <string name="effets">
        - mrbubblewand.wordpress.com
    </string>
    <string name="logo">Représente le logo de l\'université de Laval</string>
    <string name="buttonCreditToMenu">Retourner au menu</string>
    <string name="selectionner">Ajouter au deck</string>
    <string name="CarteDeck">Nb Cartes Deck :</string>
    <string name="alertNbCartes">
        Vous n\'avez pas sélectionné un nombre de cartes suffisant pour créer un deck.
        Souhaitez vous remplir le deck de manière aléatoire?
    </string>
    <string name="supprimer">SUPPRIMER</string>
    <string name="ajouter">AJOUTER</string>
    <string name="suivant">Suivant</string>
    <string name="precedent">Précédent</string>
    <string name="save">Enregistrer</string>
    <string name="title_activity_tutoriel">Tutoriel</string>
        <string name="tutoLancePartie">1) Lancer une partie</string>
        <string name="LancerPartie1">Tout d\'abord cliquez sur le bouton \"JOUER\"</string>
        <string name="LancerPartie2">Vous arrivez alors sur cette fenêtre, attendez jusqu\'à ce qu \'un joueur vous rejoigne</string>
        <string name="LancerPartie3">Si vous voyez cette fenêtre alors vous êtes bien sur une partie</string>
        <string name="tutoCommentJouer">2) Comment jouer</string>
        <string name="tutoCommentJouer1">Cliquer sur le symbole représentant une carte pour afficher l’ensemble de vos cartes.</string>
        <string name="tutoCommentJouer2">Appuyez sur la carte que vous souhaitez jouer.</string>
        <string name="tutoCommentJouer3">Les cartes sont de 2 types : Armée ou héros et sort. Référez vous à la partie du tutoriel correspond à votre choix.</string>
                <string name="tutoJouerSort">a) Jouer un sort</string>
                <string name="tutoJouerSort1">Cliquez sur “Jouer cette carte”</string>
                <string name="tutoJouerSort2">Les cases disponibles pour jouer votre sort apparaissent. Les cases bleus sont des unités, et les vertes, les cases du terrain.</string>
                <string name="tutoJouerSort3">Appuyer sur une case pour jouer le sort.</string>
                 <string name="tutoJouerArmée">b) Jouer une armée</string>
                <string name="tutoJouerArmée1">Cliquez sur “Jouer cette carte”</string>
                <string name="tutoJouerArmée2">Les cases disponibles pour placer votre unité apparaissent en verts.</string>
                <string name="tutoJouerArmée3">Appuyez sur une case verte pour placer la carte</string>
        <string name="tutoCreationDeck">3) Créer un deck</string>
        <string name="CreationDeck0">Pour créer un deck cliquez sur le bouton \"Constituer deck\"</string>
        <string name="CreationDeck1">Pour la construction de deck tout se passera dans l\'interface suivante</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>