<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="ked.pts3g10.TutorielActivity"
tools:showIn="@layout/activity_tutoriel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/title_activity_tutoriel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_marginTop="16dp"
            android:text="@string/tutoLancePartie"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginTop="6dp"
            android:text="@string/LancerPartie1"/>


        <ImageView
            android:id="@+id/menu_tuto_1_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/LancerPartie1"
            app:srcCompat="@drawable/menu_tuto_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginTop="6dp"
            android:text="@string/LancerPartie2"/>


        <ImageView
            android:id="@+id/menu_tuto_1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/LancerPartie2"
            app:srcCompat="@drawable/chargement" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginTop="6dp"
            android:text="@string/LancerPartie3"/>

        <ImageView
            android:id="@+id/menu_tuto_1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/LancerPartie3"
            app:srcCompat="@drawable/partie_vide" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_marginTop="16dp"
            android:text="@string/tutoCommentJouer"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_text" />

    </LinearLayout>



</ScrollView>
