<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools= "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop= "0dp"
    android:orientation="vertical"
    tools:context="ked.pts3g10.LaunchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop= "50dp">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_castlewar" />

        <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_button"

            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="196dp"
            />

        <Button
            android:id="@+id/constituerDeck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="constituer deck"
            tools:layout_editor_absoluteX="136dp"

            tools:layout_editor_absoluteY="196dp" />

        <Button
            android:id="@+id/credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="196dp" />

        <Button
            android:id="@+id/Tutoriel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="196dp"
            tools:layout_editor_absoluteX="136dp"
            android:text="@string/Tutoriel" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_button"
            tools:layout_editor_absoluteX="136dp"
            tools:layout_editor_absoluteY="196dp" />


    </LinearLayout>


</LinearLayout>
